# opencvreadsave

./: CMakeLists.txt  README.md  savevideo.cpp
.github/workflows/: main.yml
